syntax = "proto3";

option go_package = "./proto";

package book_service;

service BookService {
    rpc CreateBook(Book) returns (BookResponse);
    rpc ReadBook(stream BookID) returns (stream Book);
    rpc UpdateBook(Book) returns (BookResponse);
    rpc DeleteBook(BookID) returns (BookResponse);
}

message Book {
    int64 id = 1 ;
    string title = 2;
    string author = 3;
    int64 price = 4;
    int64 amount = 5;
}

message BookID {
    int64 id = 1;
}

message BookResponse {
    string status = 1;
}